# receipt-backend

./: Cargo.toml  Dockerfile  README.md  htl_logo.pbm  justfile
src/: main.rs  order.rs  receipt_printer.rs
