[package]
name = "testing-bon"
version = "0.1.0"
edition = "2021"

[dependencies]
escpos = { version = "0.13.1", features = ["usb", "graphics"] }
anyhow = "1.0.93"
axum = "0.7.7"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["macros","rt-multi-thread"] }
tower-http = { version = "0.6.1", features = ["cors"] }

